force-app/main/default/objects/Contact_Summary__c/Contact_Summary__c.object-meta.xml
<CustomObject>
    <description>Stores a summary of the number of Contacts associated with an Account, grouped by Contact Type and State. Created and updated manually via custom action, or optionally through automation.</description>
    <label>Contact Summary</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>