force-app/main/default/objects/Contact_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account associated with this contact summary record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Summaries</relationshipLabel>
    <relationshipName>Contact_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>