force-app/main/default/objects/Contact_Summary__c/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <description>Total number of Contacts for this Account with the given Type and State.</description>
    <label>Contact Count</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>