force-app/main/default/objects/Contact_Summary__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <description>Type of the contact, based on values from related Contact records.</description>
    <label>Contact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Type</valueSetName>
    </valueSet>
</CustomField>