force-app/main/default/objects/Contact_Summary__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State or location of the contact. Used for grouping and reporting.</description>
    <label>State</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>