force-app/main/default/objects/Contact_Summary__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Auto-generated key for upsert operations (Account-Type-State).</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>