force-app/main/default/objects/Contact_Summary__c/validationRules/Check_Contact_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Contact_Count</fullName>
    <active>true</active>
    <description>The number of contacts cannot exceed 5</description>
    <errorConditionFormula>Contact_Count__c &gt; 5</errorConditionFormula>
    <errorMessage>The number of contacts cannot exceed 5.</errorMessage>
</ValidationRule>